--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ h1 {
     margin: 0;
     font-weight: normal;
     text-transform: uppercase;
-
 }
 
 #colorDisplay {
@@ -40,10 +39,13 @@ h1 {
 #message {
     display: inline-block;
     width: 20%;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    text-transform: uppercase;
 }
 #stripe {
     background: white;
-    height: 30px;
+    height: 50px;
     text-align: center;
     color: black;
 }
