--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
     transition: background 0.6s;
     --webkit-transition: background 0.6s;
     --moz-transition: background 0.6s;
+    cursor: pointer;
 }
 
 #container {
@@ -68,7 +69,7 @@ button {
     --webkit-transition: all 0.5s;
     --moz-transition: all 0.5s;
     outline: none;
-
+    cursor: pointer;
 }
 
 button:hover {
